melior/src/dialect/snapshots/melior__dialect__arith__tests__arith.cmpi.snap
---
source: melior/src/dialect/arith.rs
expression: module.as_operation()
---
module {
  func.func @foo(%arg0: i64, %arg1: i64) -> i1 {
    %0 = arith.cmpi eq, %arg0, %arg1 : i64
    return %0 : i1
  }
}

