melior/src/dialect/snapshots/melior__dialect__arith__tests__arith.extf.snap
---
source: melior/src/dialect/arith.rs
expression: module.as_operation()
---
module {
  func.func @foo(%arg0: f32) -> f64 {
    %0 = arith.extf %arg0 : f32 to f64
    return %0 : f64
  }
}

