melior/src/dialect/snapshots/melior__dialect__arith__tests__arith.fptosi.snap
---
source: melior/src/dialect/arith.rs
expression: module.as_operation()
---
module {
  func.func @foo(%arg0: f32) -> i64 {
    %0 = arith.fptosi %arg0 : f32 to i64
    return %0 : i64
  }
}

