melior/src/dialect/snapshots/melior__dialect__arith__tests__arith.index_castui.snap
---
source: melior/src/dialect/arith.rs
expression: module.as_operation()
---
module {
  func.func @foo(%arg0: index) -> i64 {
    %0 = arith.index_castui %arg0 : index to i64
    return %0 : i64
  }
}

