melior/src/dialect/snapshots/melior__dialect__arith__tests__arith.trunci.snap
---
source: melior/src/dialect/arith.rs
expression: module.as_operation()
---
module {
  func.func @foo(%arg0: i64) -> i32 {
    %0 = arith.trunci %arg0 : i64 to i32
    return %0 : i32
  }
}

